# libgds

./: CMakeLists.txt  README.md
include/: gds.h  prefix.h  suffix.h
src/: common.h  debug.c  elem.c  lib.c  parser.c  reader.c  real.c  struct.c  util-ptrset.c  util.c  util.h  writer.c
